--- a/week4/style.css
+++ b/week4/style.css
@@ -11,8 +11,12 @@ h1, h2, h3 {
 }
 header {
     background-color: rgb(204, 62, 62);
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
+   
+}
+.pokemon {
+    display: inline-flex;
 }
 ul {
     list-style: none; 
@@ -23,10 +27,7 @@ a {
     text-decoration: none;
     color: black;
 }
-.pokemon {
-    margin: 0;
 
-}
 .navigation {
     margin: 0;
     padding: 0;
@@ -48,19 +49,20 @@ a {
 }
 .aircraft {
     width: 50%;
+    text-align: center;
     
 }
 .donloade {
     border-style: solid;
     border-color: black;
-    border: 5px;
+    /*border: 100px;  почему не работает это?*/
 }
 
 
 .rabbit {
     text-align: center;
-   /* max-width: 1200px;
-    width: 100%;*/
+    max-width: 1200px;
+    width: 100%;
     border-bottom-width: 5px;
     border-bottom-color: blueviolet;
     border-bottom-style: solid;
@@ -93,10 +95,12 @@ a {
 
 .picture {
     display: flex;
+    flex-wrap: wrap;
 }
 .google, .apple {
-    width: 180px;
-    height: 120px;
+    width: 220px;
+    height: 67px;
+    padding: 5px;
 }
 .four img {
     width: auto;
@@ -105,8 +109,7 @@ a {
 
 footer {
     display: flex;
-    background-color: rgb(204, 62, 62);
-    justify-content: baseline;
+    background-color: rgb(204, 62, 62);    
 }
 footer p{
     margin-left: 20px;
@@ -114,5 +117,5 @@ footer p{
 }
 footer a {
     margin: 20px;
-    
+    text-align: end;
 }
