--- a/week5/style.css
+++ b/week5/style.css
@@ -5,10 +5,10 @@ header {
     text-align: center;    
     background-color: darkslategray;
     width:100%;
-    height: 1048px;   
+    height: 958px;   
 }
 h1 {
-    font-size: 32px;
+    font-size: 4em;
     font-weight: bold;
     color: white;
 }
@@ -32,14 +32,14 @@ a {
     justify-content: space-around;
     width: 1200px;
     height: 100%;
-    margin-left: 25%;
-    margin-right: 25%;    
+    margin-left: 15%;
+    /*margin-right: 25%;*/
 }
 .logo {
     display: inline-flex;
 }
 .logo img{
-    margin-right: 10px;
+    margin-right: 1%;
 }
 .logo p{
     vertical-align: middle;
@@ -57,17 +57,17 @@ a {
     text-align: center;
     width: 1200px;
     height: 100%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 15%;
+    /*margin-right: 25%;*/
     border-top: 2px solid;
     border-top-color: black;
 
 }
 .info h2, .info p, .info h3 {
-    padding: 15px;
+    padding: 1%;    
 }
 .info h2 {
-    font-size: 24px;
+    font-size: 3em;
     font-weight: bold;
     color: rgb(185, 37, 37);
 }
@@ -77,25 +77,125 @@ a {
     padding-inline-start: 0;
 }
 .we h3 {
-    font-size: 18px;
+    font-size: 2em;
     font-weight: bold;
     color: rgb(185, 37, 37);
 }
 .info2 {
-    text-align: center;
-    
-    background-color: rgb(66, 168, 106);
+    text-align: center;    
+    background-color: rgb(66, 168, 106);    
+    width: 1200px;
+    height: 100%;
+    padding-left: 15%;
+    /*padding-right: 25%;*/
+    padding-bottom: 3%;
 }
 .info2 h2 {
-    font-size: 24px;
+    font-size: 3em;
     font-weight: bold;
     color: rgb(235, 98, 19);
     padding: 2%;
 }
-.info2 {
+.portfolio {
+    margin-top: 2%;
+    margin-bottom: 5%;
+    text-align: center;    
+}
+.portfolio h3 {
+    font-size: 2em;
+    font-weight: bold;
+    color: rgb(185, 37, 37);
+    padding: 1%;
+}
+.portfolio-img {
+    display: inline-flex;
+    flex-wrap: wrap; 
     width: 1200px;
     height: 100%;
-    padding-left: 25%;
-    padding-right: 25%;
+}
+.portfolio-img img {
+    width: 25%;
+    object-fit: fill;
+    width: 270px;
+    height: 202px;
+    padding: 10px;
+}
+.client {
+    background-color: rgb(206, 188, 200);
+    text-align: center;
+    padding-top: 3%;
     padding-bottom: 3%;
+}
+.client h3 {
+    font-size: 2em;
+    font-weight: bold;
+    color: rgb(5, 5, 5);
+}
+.client-img {
+    display: inline-flex;
+    width: 1200px;
+    height: 100%;
+}
+.client-img img {
+    width: 170px;
+    height: 102px;
+    padding: 10px;
+}
+.us {
+    background-color: rgb(45, 156, 82);
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 3%; 
+    padding-left: 15%;      
+}
+.us h3 {
+    
+    font-size: 2em;
+    font-weight: bold;
+    color: rgb(5, 5, 5);
+}
+.form {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 1200px;
+    height: 100%; 
+    padding-top: 15px;
+}
+input, .message {
+    width: 970px;
+    height: 50px;
+    margin-bottom: 20px;
+    color: red;
+    background-color: yellow;
+}
+.short {
+    width: 470px;
+    height: 50px;
+    margin-right: 30px;
+}
+.message {
+    height: 177px;
+    width: 970px;
+}
+.send {
+    background-color: black;
+    color: white;
+    border: none;
+    color: yellow;
+    height: 30px;
+}
+footer {
+    display: inline-flex;
+    justify-content: space-around;
+    background-color: rgb(231, 190, 128);
+    width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border: none;
+}
+.link img{
+    width: 30px;
+    height: 30px;
+    padding-left: 10px;
 }
